# nova_aoede

./: Cargo.toml  plan.txt
src/: client.rs  data.rs  error_handler.rs  handlers.rs  main.rs  types.rs  utils.rs
src/commands/misc/: mod.rs  piped.rs
src/commands/owner/: mod.rs
