[package]
name = "nova_aoede"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
hrtime = "0.2.0"
dotenv = "0.15.0"
reqwest = "0.11.18"
serde_json = "1.0.97"

[dependencies.serde]
version = "1.0"
features = [
  "derive",
]

[dependencies.tokio]
version = "1.24"
features = [
  "full",
]

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = [
  "builder",
  "cache",
  "collector",
  "client",
  "gateway",
  "http",
  "model",
  "time",
  "utils",
  "voice",
  "temp_cache",
  "rustls_backend",
]

[dependencies.poise]
version = "0.5.5"
features = [
  "cache",
  "chrono",
  "time",
]

[dependencies.songbird]
version = "0.3"
